fix: avoid layout shift

--- a/assets/scss/components/_algolia.scss
+++ b/assets/scss/components/_algolia.scss
@@ -1,3 +1,7 @@
+#docsearch {
+  min-height: 46px;
+}
+
 @media (min-width: 680px) {
   #docsearch:hover {
     width: auto;
